@@ -1,6 +1,10 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
+CalcQuantiles <- function(X, q) {
+    .Call(`_RcppBVAR_CalcQuantiles`, X, q)
+}
+
 prepData <- function(series, p, include_const = TRUE) {
     .Call(`_RcppBVAR_prepData`, series, p, include_const)
 }
@@ -35,6 +39,10 @@ BVAR_cniw_setup <- function(series, lam, p, delt, v_prior, s2_lag = 1L, Z = NULL
 
 BVAR_cniw_est <- function(setup, keep, verbose = FALSE, n_chains = 1L) {
     .Call(`_RcppBVAR_BVAR_cniw_est`, setup, keep, verbose, n_chains)
+}
+
+.bvar_fcst <- function(model, series, Z_f = NULL, h = 1L, out_of_sample = TRUE, type = "prediction", level_ = NULL, include_ = NULL, fast_forecast = FALSE, verbose = FALSE) {
+    .Call(`_RcppBVAR_BVAR_cniw_forecast`, model, series, Z_f, h, out_of_sample, type, level_, include_, fast_forecast, verbose)
 }
 
 BVAR <- function(series, p, C, V0, Phi0, df = 5L, include_mean = TRUE) {
